--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
+  <link rel="shortcut icon" href="/favicon.ico" />
 <title>杭州中日友好日本語交流会</title>
 <meta name="description" content="杭州　日本語コーナー　日角">
 <meta name="author" content="杭州中日友好日本語交流会">
