--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
     <div class="container banner-content">
       <div class="hero-text animated fadeInDownBig">
-        <h1 class="responsive-headline" style="font-size: 40px;">ここで色んな人と出会い、中国の生活を充実にしましょう</h1>
+        <h1 class="responsive-headline" style="font-size: 40px;">ここで色んな人と出会い、中国の生活を充実にしましょう。ここで色んな人と出会い、中国の生活を充実にしましょう</h1>
         <a href="#basics" class="arrow-link"> <i class="fa fa-arrow-circle-down fa-2x"></i> </a> 
         <!--<p>Awesome theme for your Business or Corporate site to showcase <br/>
           your product and service.</p>--> 
@@ -79,7 +79,7 @@
     <div class="row feature design">
       <div class="six columns right">
         <p>杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、10年前に浙江大学と浙江外国語学院の学生たちが創立しました。</p>
-        <p>現在は杭州在住日本人、留学生、アニファン、日本留学経験者等いろんな方が集まっています。交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。</p>
+        <p>現在は杭州在住日本人、留学生、アニメファン、日本留学経験者等いろんな方が集まっています。交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。</p>
         <p>また、交流会の以外、みんな飲みに行ったり、遊びに行ったり、楽しいイベントを企画したりすることもあります。</p>
         <p>異文化交流に興味があり、友達が欲しい、日本人同士を探したい様々の理由がありますが、是非いらっしゃってください！</p>
       </div>
@@ -254,9 +254,7 @@
 <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script> 
 <script src="js/jquery.nav.js" type="text/javascript"></script> 
 <script src="js/jquery.fittext.js"></script> 
-<script src="js/waypoints.js"></script> 
- <script src="contact/jqBootstrapValidation.js"></script>
- <script src="contact/contact_me.js"></script>
+<script src="js/waypoints.js"></script>
 <script src="js/custom.js" type="text/javascript"></script> 
 <script src="js/owl-carousel/owl.carousel.js"></script>
 </body>
