--- a/index.html
+++ b/index.html
@@ -51,21 +51,22 @@
                         <nav class="navbar navbar-default">
                           <div class="container-fluid">
                             <!-- Brand and toggle get grouped for better mobile display -->
-                            <div class="navbar-header">
+                              <div class ="navbar-container" >
+                            <div class="navbar-header" >
                               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                               </button>
-                                  <a class="navbar-brand" href="#">
-                                    <img src="images/logo.png" alt="Logo">
-                                  </a>
+                                <div class="navbar-brand"  >
+                                    <img src="images/logo.png" style="width: 100%;">
+                                </div>
 
                             </div>
 
                             <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="width: 60%;">
                               <ul class="nav navbar-nav navbar-right" id="top-nav">
                                 <li><a href="#hero-area">ホーム</a></li>
                                 <li><a href="#about-us">ご紹介</a></li>
@@ -75,7 +76,8 @@
                                 <li><a href="#contact-us">連絡先</a></li>
                               </ul>
                             </div><!-- /.navbar-collapse -->
-                          </div><!-- /.container-fluid -->
+                              </div>
+                              </div><!-- /.container-fluid -->
                         </nav>
                     </div>
                 </div><!-- .col-md-12 close -->
