--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	header-img start 
 	============================== -->
     <section id="hero-area">
-      <img class="img-responsive" src="images/header.jpg" alt="">
+      <img class="img-responsive" src="http://hz-jc.test.upcdn.net/header.jpg" alt="">
     </section>
 	<!--
     Header start 
@@ -60,7 +60,7 @@
                                 <span class="icon-bar"></span>
                               </button>
                                 <div class="navbar-brand"  >
-                                    <img src="images/logo.png" style="width: 100%;">
+                                    <img src="http://hz-jc.test.upcdn.net/logo.png" style="width: 100%;">
                                 </div>
 
                             </div>
@@ -97,28 +97,28 @@
                         </div>
                         <div id="owl-example" class="owl-carousel">
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-1.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-1.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-2.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-2.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-3.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-3.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-4.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-4.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-5.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-5.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-6.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-6.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-1.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-1.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="images/slider/slider-img-2.jpg" alt="">
+                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-2.jpg" alt="">
                             </div>
                         
                         </div>
@@ -138,7 +138,7 @@
                         <h1 class="heading wow fadeInUp" data-wow-duration="400ms" data-wow-delay="500ms" ><span>ご紹介</span>
                         </h1>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
-                            <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="images/cooker-img.png" alt="cooker-img">
+                            <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="http://hz-jc.test.upcdn.net/cooker-img.png" alt="cooker-img">
                         </p>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
                         杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、10年前に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
@@ -163,7 +163,7 @@
                         <ul>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                 <div class="blog-img">
-                                    <img src="images/blog/blog-img-1.jpg" alt="blog-img">
+                                    <img src="http://hz-jc.test.upcdn.net/blog-img-1.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>Homestyle Chicken Pot Pie</h3>
@@ -172,7 +172,7 @@
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="400ms">
                                 <div class="blog-img">
-                                    <img src="images/blog/blog-img-2.jpg" alt="blog-img">
+                                    <img src="http://hz-jc.test.upcdn.net/blog-img-2.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>Homestyle Chicken Pot Pie</h3>
@@ -185,7 +185,7 @@
                                     <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
                                 </div>
                                 <div class="blog-img-2">
-                                    <img src="images/blog/blog-img-3.jpg" alt="blog-img">
+                                    <img src="http://hz-jc.test.upcdn.net/blog-img-3.jpg" alt="blog-img">
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="600ms">
@@ -194,12 +194,12 @@
                                     <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
                                 </div>
                                 <div class="blog-img-2">
-                                    <img src="images/blog/blog-img-4.jpg" alt="blog-img">
+                                    <img src="http://hz-jc.test.upcdn.net/blog-img-4.jpg" alt="blog-img">
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="700ms">
                                 <div class="blog-img">
-                                    <img src="images/blog/blog-img-5.jpg" alt="blog-img">
+                                    <img src="http://hz-jc.test.upcdn.net/blog-img-5.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>Homestyle Chicken Pot Pie</h3>
@@ -208,7 +208,7 @@
                             </li>
                             <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="800ms">
                                 <div class="blog-img">
-                                    <img src="images/blog/blog-img-6.jpg" alt="blog-img">
+                                    <img src="http://hz-jc.test.upcdn.net/blog-img-6.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>Homestyle Chicken Pot Pie</h3>
@@ -411,16 +411,16 @@
                             <h3>PHOTO <span>STREAM</span></h3>
                             <ul>
                                 <li>
-                                    <a href="#"><img src="images/photo/photo-1.jpg" alt=""></a>
+                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-1.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="images/photo/photo-2.jpg" alt=""></a>
+                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-2.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="images/photo/photo-3.jpg" alt=""></a>
+                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-3.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="images/photo/photo-4.jpg" alt=""></a>
+                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-4.jpg" alt=""></a>
                                 </li>
                             </ul>
                         </div>
