--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="block">
-                        <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://h2design.taobao.com/">氢设计</a></p>
+                        <p>Copyright &copy; 2019.HangZhou Japanese Corner All rights reserved.</p>
                     </div>
                 </div>
             </div>
