--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <!-- Responsive Stylesheet -->
 		<link rel="stylesheet" href="css/responsive.css">
 		<!-- Js -->
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="http://hz-jc.test.upcdn.net/js/vendor/modernizr-2.6.2.min.js"></script>
     <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="http://hz-jc.test.upcdn.net/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="js/jquery.nav.js"></script>
     <script src="js/jquery.sticky.js"></script>
     <script src="js/bootstrap.min.js"></script>
