--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <script src="js/plugins.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
-	</head>
+        <!--引用百度地图API-->
+        <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lyzU1dsqOio1zybAtZfxlz3GVSBEPMwf"></script>
+    </head>
 	<body>
 	<!--
 	header-img start 
@@ -72,7 +74,7 @@
                                 <li><a href="#about-us">ご紹介</a></li>
                                 <li><a href="#blog">ギャラリー</a></li>
                                 <li><a href="#price">歴史</a></li>
-                                <li><a href="#footer">連絡先</a></li>
+                                <li><a href="#footer">イベント開催情報</a></li>
                               </ul>
                             </div><!-- /.navbar-collapse -->
                               </div>
@@ -92,7 +94,7 @@
                 <div class="col-md-12">
                     <div class="block wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                         <div class="title">
-                            <h3>様々な<span>イベント</span></h3>
+                            <h3>アルバム<span></span></h3>
                         </div>
                         <div id="owl-example" class="owl-carousel">
                             <div>
@@ -136,15 +138,17 @@
                     <div class="block">
                         <h1 class="heading wow fadeInUp" data-wow-duration="400ms" data-wow-delay="500ms" ><span>ご紹介</span>
                         </h1>
+                        <div class="content">
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
                             <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="http://hz-jc.test.upcdn.net/cooker-img.png" alt="cooker-img">
                         </p>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms" style="text-align:justify">
                         杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
-                            現在は杭州在住日本人、留学生、アニメファン、日本留学経験者等いろんな方が集まっています。交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。</br>
-                        </br>
+                            現在は杭州在住日本人、留学生、アニメファン、日本留学経験者等いろんな方が集まっています。</br>
+                            交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。</br>
                             また、交流会の以外、みんな飲みに行ったり、遊びに行ったり、楽しいイベントを企画したりすることもあります。異文化交流に興味があり、友達が欲しい、日本人同士を探したい様々の理由がありますが、是非いらっしゃってください！</br>
                         </p>
+                        </div>
                     </div>
                 </div><!-- .col-md-12 close -->
             </div><!-- .row close -->
@@ -314,26 +318,29 @@
             <div class="row">
                 <div class="block">
 
-                <h1 class="heading wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">連絡先</h1>
+                <h1 class="heading wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">日本語コーナー開催中</h1>
                 <div class="col-md-4">
                     <div class="block wow fadeInLeft"  data-wow-delay="200ms">
-                        <h3>連絡<span>情報</span></h3>
                         <div class="info">
                             <ul>
                                 <li>
-                                  <h4><i class="fa fa-phone" style="width:20px;"></i>電話</h4>
-                                  <p>+86-132 1616 0530（日本語対応可）</p>
-                                    
+                                    <h4><i class="fa fa-clock-o" style="width:20px;"></i>時間</h4>
+                                    <p>毎週日曜日 13:30～17:00</p>
+
                                 </li>
                                 <li>
-                                  <h4><i class="fa fa-map-marker" style="width:20px;"></i>住所</h4>
-                                  <p>上城区青年路27号1楼，拉姆咖啡(青年路店)</p>
+                                  <h4><i class="fa fa-phone" style="width:20px;"></i>電話</h4>
+                                  <p>+86-132 1616 0530（日本語対応可）</p>
                                 </li>
                                 <li>
                                   <h4><i class="fa fa-envelope" style="width:20px;"></i>メール</h4>
-                                  <p>（日本）田　中：fwnx3855@gmail.com</p>
-                                    <p>（中国）アロン：hualong527@163.com</p>
-
+                                  <p>(日本)田　中：fwnx3855@gmail.com</p>
+                                    <p>(中国)アロン：hualong527@163.com</p>
+                                </li>
+                                <li>
+                                    <h4><i class="fa fa-wechat" style="width:20px;"></i>Wechat</i></h4>
+                                    <p>(日本)田　中：tanaka_nobu</p>
+                                    <p>(中国)アロン：108748350</p>
                                 </li>
                             </ul>
                         </div>
@@ -342,22 +349,17 @@
                 <!-- .col-md-4 close -->
                 <div class="col-md-4">
                     <div class="block wow fadeInLeft"  data-wow-delay="700ms">
-                        <h3>日本語<span>コーナー</span></h3>
                         <div class="blog">
                             <ul>
                                 <li>
-                                    <h4><a href="#">時間</a></h4>
-                                    <p>毎週日曜日午後1時半～5時</p>
+                                    <h4><i class="fa fa-map-marker" style="width:20px;"></i>場所</h4>
+                                    <p>浙江省杭州市上城区青年路27号1楼，拉姆咖啡(青年路店)</p>
                                 </li>
                                 <li>
-                                    <h4><a href="#">場所</a></h4>
-                                    <p>上城区青年路27号1楼，拉姆咖啡(青年路店)</p>
+                                    <h4><i class="fa fa-qrcode" style="width:20px;"></i>Wechat公式サイト</h4>
+                                    <img src="http://hz-jc.test.upcdn.net/qrcode_hz-jc.jpg" alt="Wechat公式サイト" style="width: 200px;">
                                 </li>
-                                <li>
-                                    <h4><a href="#">アクセス</a></h4>
-                                    <p>杭州地鉄一号線定安路駅より徒歩5分</p>
-                                </li>
-                            </ul>                
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -365,39 +367,12 @@
                 <div class="col-md-4">
                     <div class="block wow fadeInLeft"  data-wow-delay="1100ms">
                         <div class="gallary">
-                            <h3>QR <span>コード</span></h3>
                             <ul>
                                 <li>
-                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/qrcode_hz-jc.jpg" alt="Wechat公式サイト" style="width: 64px;"></a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-2.jpg" alt="" style="width: 64px;"></a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-3.jpg" alt="" style="width: 64px;"></a>
-                                </li>
-                                <li>
-                                    <a href="#"><img src="http://hz-jc.test.upcdn.net/photo-4.jpg" alt="" style="width: 64px;"></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="social-media-link">
-                            <h3><span>Wechat公式サイト</span></h3>
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-facebook"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-dribbble"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-behance"></i>
-                                    </a>
+                        <h4><i class="fa fa-road" style="width:20px;"></i>アクセス</h4>
+                        <p>杭州地鉄一号線定安路駅より徒歩5分</p>
+                        <!--百度地图容器-->
+                        <div style="width:350px;height:300px;border:#ccc solid 1px;font-size:12px" id="map"></div>
                                 </li>
                             </ul>
                         </div>
@@ -423,4 +398,85 @@
         </div>
     </footer>
 	</body>
+    <script type="text/javascript">
+        //创建和初始化地图函数：
+        function initMap(){
+            createMap();//创建地图
+            setMapEvent();//设置地图事件
+            addMapControl();//向地图添加控件
+            addMapOverlay();//向地图添加覆盖物
+        }
+        function createMap(){
+            map = new BMap.Map("map");
+            map.centerAndZoom(new BMap.Point(120.17633,30.253075),17);
+        }
+        function setMapEvent(){
+            map.enableScrollWheelZoom();
+            map.enableKeyboard();
+            map.enableDragging();
+            map.enableDoubleClickZoom()
+        }
+        function addClickHandler(target,window){
+            target.addEventListener("click",function(){
+                target.openInfoWindow(window);
+            });
+        }
+        function addMapOverlay(){
+            var markers = [
+                {content:"",title:"拉姆咖啡",imageOffset: {width:0,height:3},position:{lat:30.255114,lng:120.17443}},
+                {content:"",title:"定安路地铁A出口",imageOffset: {width:0,height:3},position:{lat:30.252084,lng:120.175153}}
+            ];
+            for(var index = 0; index < markers.length; index++ ){
+                var point = new BMap.Point(markers[index].position.lng,markers[index].position.lat);
+                var marker = new BMap.Marker(point,{icon:new BMap.Icon("http://api.map.baidu.com/lbsapi/createmap/images/icon.png",new BMap.Size(20,25),{
+                        imageOffset: new BMap.Size(markers[index].imageOffset.width,markers[index].imageOffset.height)
+                    })});
+                var label = new BMap.Label(markers[index].title,{offset: new BMap.Size(25,5)});
+                var opts = {
+                    width: 200,
+                    title: markers[index].title,
+                    enableMessage: false
+                };
+                var infoWindow = new BMap.InfoWindow(markers[index].content,opts);
+                marker.setLabel(label);
+                addClickHandler(marker,infoWindow);
+                map.addOverlay(marker);
+            };
+            var plOpts = [
+                {strokeColor:"#f00",strokeWeight:"4",strokeOpacity:"0.6"}
+            ];
+            var plPath = [
+                [
+                    new BMap.Point(120.175252,30.252031),
+                    new BMap.Point(120.175544,30.252047),
+                    new BMap.Point(120.17553,30.25317),
+                    new BMap.Point(120.17522,30.253197),
+                    new BMap.Point(120.175144,30.254149),
+                    new BMap.Point(120.175036,30.254691),
+                    new BMap.Point(120.174978,30.255182),
+                    new BMap.Point(120.17447,30.255145),
+                    new BMap.Point(120.174466,30.255149),
+                    new BMap.Point(120.174443,30.255145),
+                    new BMap.Point(120.174443,30.255141),
+                    new BMap.Point(120.174443,30.255141)
+                ],
+            ];
+            for(var index = 0; index < plOpts.length; index++){
+                var polyline = new BMap.Polyline(plPath[index],plOpts[index]);
+                map.addOverlay(polyline);
+            }
+        }
+        //向地图添加控件
+        function addMapControl(){
+            var scaleControl = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
+            scaleControl.setUnit(BMAP_UNIT_IMPERIAL);
+            map.addControl(scaleControl);
+            var navControl = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:0});
+            map.addControl(navControl);
+            var overviewControl = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:true});
+            map.addControl(overviewControl);
+        }
+        var map;
+        initMap();
+    </script>
 </html>
