--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
         <!--引用百度地图API-->
-        <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lyzU1dsqOio1zybAtZfxlz3GVSBEPMwf"></script>
+        <script type="text/javascript">
+            window.HOST_TYPE='2'
+        </script>
+        <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=lyzU1dsqOio1zybAtZfxlz3GVSBEPMwf&s=1"></script>
     </head>
 	<body>
 	<!--
