--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="ja">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="shortcut icon" href="/favicon.ico" />
-        <title>杭州中日友好日本語交流会</title>
-        <meta name="description" content="杭州　日本語コーナー　日角">
+        <title>杭州中日友好日本語交流会(日本語コーナー/日语角/Japanese Corner)</title>
+        <meta name=”keywords” Content=”日本,コーナー,中日,日中,交流,杭州″>
+        <meta name="description" content="在我们日语角，你可以练习日语，结交中外朋友，深入了解日本文化，关于日本的一切在这里都有！中国語練習・友達作り・中日文化交流など、 中国でいろんなことを応援します！">
         <meta name="author" content="杭州中日友好日本語交流会">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- CSS
@@ -146,10 +147,9 @@
                             <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="http://hz-jc.test.upcdn.net/cooker-img.png" alt="cooker-img">
                         </p>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms" style="text-align:justify">
-                        杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
+                            杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
                             現在は杭州在住日本人、留学生、アニメファン、日本留学経験者等いろんな方が集まっています。</br>
-                            交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。</br>
-                            また、交流会の以外、みんな飲みに行ったり、遊びに行ったり、楽しいイベントを企画したりすることもあります。異文化交流に興味があり、友達が欲しい、日本人同士を探したい様々の理由がありますが、是非いらっしゃってください！</br>
+                            交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。また、交流会の以外、みんな飲みに行ったり、遊びに行ったり、楽しいイベントを企画したりすることもあります。異文化交流に興味があり、友達が欲しい、日本人同士を探したい様々の理由がありますが、是非いらっしゃってください！</br>
                         </p>
                         </div>
                     </div>
