--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>日本語コーナー</h3>
-                                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+                                    <p>毎週日曜日の午後に行っています。ここでいろんな方と出会い、楽しく会話しましょう。</p>
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="400ms">
@@ -182,13 +182,13 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>飲み会</h3>
-                                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+                                    <p>日本語コーナーが終わった後に、ほぼ毎週行っています。美味しい中華料理または日本料理を食べながら、ビールを飲みましょう！</p>
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="500ms">
                                 <div class="content-left">
                                     <h3>文化サロン</h3>
-                                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+                                    <p>中日文化交流のため、中国または日本に関するプレゼンテーションを約月一回で行っています。</p>
                                 </div>
                                 <div class="blog-img-2">
                                     <img src="http://hz-jc.test.upcdn.net/blog-img-3.jpg" alt="blog-img">
@@ -197,7 +197,7 @@
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="600ms">
                                 <div class="content-left">
                                     <h3>忘年会</h3>
-                                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+                                    <p>年末は中国式の忘年会を体験しましょう。中華料理や中国のお酒などいっぱい満喫できるでしょう！</p>
                                 </div>
                                 <div class="blog-img-2">
                                     <img src="http://hz-jc.test.upcdn.net/blog-img-4.jpg" alt="blog-img">
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>山登り</h3>
-                                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+                                    <p>春または秋は山登りしましょう！山の中に、春の新緑や秋の紅葉を満喫しましょう！</p>
                                 </div>
                             </li>
                             <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="800ms">
@@ -218,7 +218,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>カラオケ</h3>
-                                    <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
+                                    <p>カラオケが好きな方を集めて、日本や中国の歌をいっぱい歌いましょう！</p>
                                 </div>
                             </li>
                         </ul>
