--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="width: 60%;">
                               <ul class="nav navbar-nav navbar-right" id="top-nav">
                                 <li><a href="#hero-area">ホーム</a></li>
-                                <li><a href="#about-us">ご紹介</a></li>
-                                <li><a href="#blog">ギャラリー</a></li>
+                                <li><a href="#about-us">交流会とは</a></li>
+                                <li><a href="#blog">各イベント</a></li>
                                 <li><a href="#price">歴史</a></li>
                                 <li><a href="#footer">イベント開催情報</a></li>
                               </ul>
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <h1 class="heading">ギャラリー</h1>
+                        <h1 class="heading">各イベント</h1>
                         <ul>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                 <div class="blog-img">
