--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="600ms">
                                 <div class="content-left">
                                     <h3>忘年会</h3>
-                                    <p>年末は中国式の忘年会を体験しましょう。中華料理や中国のお酒などいっぱい満喫できるでしょう！</p>
+                                    <p>年末は中国式の忘年会を体験しませんか。中華料理や中国のお酒などいっぱい満喫できるでしょう！</p>
                                 </div>
                                 <div class="blog-img-2">
                                     <img src="http://hz-jc.test.upcdn.net/blog-img-4.jpg" alt="blog-img">
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>山登り</h3>
-                                    <p>春または秋は山登りしましょう！山の中に、春の新緑や秋の紅葉を満喫しましょう！</p>
+                                    <p>春または秋はやっぱり室外で体を動かしたいですね。山の中に、春の新緑や秋の紅葉を満喫しましょう！</p>
                                 </div>
                             </li>
                             <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="800ms">
