--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="在我们日语角，你可以练习日语，结交中外朋友，深入了解日本文化，关于日本的一切在这里都有！中国語練習・友達作り・中日文化交流など、 中国でいろんなことを応援します！">
         <meta name="author" content="杭州中日友好日本語交流会">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="baidu-site-verification" content="9I5rp61VCt" />
 		<!-- CSS
         ================================================ -->
         <!-- Owl Carousel -->
