--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="width: 60%;">
                               <ul class="nav navbar-nav navbar-right" id="top-nav">
-                                <li><a href="#hero-area">ホーム</a></li>
-                                <li><a href="#about-us">交流会とは</a></li>
-                                <li><a href="#blog">各イベント</a></li>
+                                <li><a href="#hero-area">トップ</a></li>
+                                <li><a href="#about-us">紹介</a></li>
+                                <li><a href="#blog">イベント</a></li>
                                 <li><a href="#price">歴史</a></li>
-                                <li><a href="#footer">イベント開催情報</a></li>
+                                <li><a href="#footer">開催情報</a></li>
                               </ul>
                             </div><!-- /.navbar-collapse -->
                               </div>
