--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	header-img start 
 	============================== -->
     <section id="hero-area">
-      <img class="img-responsive" src="http://hz-jc.test.upcdn.net/header.jpg" alt="">
+      <img class="img-responsive" src="images/header.jpg" alt="">
     </section>
 	<!--
     Header start 
@@ -67,7 +67,7 @@
                                 <span class="icon-bar"></span>
                               </button>
                                 <div class="navbar-brand"  >
-                                    <img src="http://hz-jc.test.upcdn.net/logo.png" style="width: 100%;">
+                                    <img src="images/logo.png" style="width: 100%;">
                                 </div>
 
                             </div>
@@ -103,28 +103,28 @@
                         </div>
                         <div id="owl-example" class="owl-carousel">
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-1.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-1.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-2.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-2.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-3.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-3.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-4.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-4.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-5.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-5.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-6.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-6.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-1.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-7.jpg" alt="">
                             </div>
                             <div>
-                                <img class="img-responsive" src="http://hz-jc.test.upcdn.net/slider-img-2.jpg" alt="">
+                                <img class="img-responsive" src="images/slider/slider-img-8.jpg" alt="">
                             </div>
                         
                         </div>
@@ -145,7 +145,7 @@
                         </h1>
                         <div class="content">
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
-                            <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="http://hz-jc.test.upcdn.net/cooker-img.png" alt="cooker-img">
+                            <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="images/cooker-img.png" alt="cooker-img">
                         </p>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms" style="text-align:justify">
                             杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
@@ -170,7 +170,7 @@
                         <ul>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                 <div class="blog-img">
-                                    <img src="http://hz-jc.test.upcdn.net/blog-img-1.jpg" alt="blog-img">
+                                    <img src="images/blog/blog-img-1.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>日本語コーナー</h3>
@@ -179,7 +179,7 @@
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="400ms">
                                 <div class="blog-img">
-                                    <img src="http://hz-jc.test.upcdn.net/blog-img-2.jpg" alt="blog-img">
+                                    <img src="images/blog/blog-img-2.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>飲み会</h3>
@@ -192,7 +192,7 @@
                                     <p>中日文化交流のため、中国または日本に関するプレゼンテーションを約月一回で行っています。</p>
                                 </div>
                                 <div class="blog-img-2">
-                                    <img src="http://hz-jc.test.upcdn.net/blog-img-3.jpg" alt="blog-img">
+                                    <img src="images/blog/blog-img-3.jpg" alt="blog-img">
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="600ms">
@@ -201,12 +201,12 @@
                                     <p>年末は中国式の忘年会を体験しませんか。中華料理や中国のお酒などいっぱい満喫できるでしょう！</p>
                                 </div>
                                 <div class="blog-img-2">
-                                    <img src="http://hz-jc.test.upcdn.net/blog-img-4.jpg" alt="blog-img">
+                                    <img src="images/blog/blog-img-4.jpg" alt="blog-img">
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="700ms">
                                 <div class="blog-img">
-                                    <img src="http://hz-jc.test.upcdn.net/blog-img-5.jpg" alt="blog-img">
+                                    <img src="images/blog/blog-img-5.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>山登り</h3>
@@ -215,7 +215,7 @@
                             </li>
                             <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="800ms">
                                 <div class="blog-img">
-                                    <img src="http://hz-jc.test.upcdn.net/blog-img-6.jpg" alt="blog-img">
+                                    <img src="images/blog/blog-img-6.jpg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>カラオケ</h3>
@@ -361,7 +361,7 @@
                                 </li>
                                 <li>
                                     <h4><i class="fa fa-qrcode" style="width:20px;"></i>Wechat公式サイト</h4>
-                                    <img src="http://hz-jc.test.upcdn.net/qrcode_hz-jc.jpg" alt="Wechat公式サイト" style="width: 200px;">
+                                    <img src="images/qrcode_hz-jc.jpg" alt="Wechat公式サイト" style="width: 200px;">
                                 </li>
                             </ul>
                         </div>
