--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <h1 class="heading wow fadeInUp" data-wow-duration="400ms" data-wow-delay="500ms" ><span>ご紹介</span>
+                        <h1 class="heading wow fadeInUp" data-wow-duration="400ms" data-wow-delay="500ms" ><span>紹介</span>
                         </h1>
                         <div class="content">
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
@@ -166,7 +166,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <h1 class="heading">各イベント</h1>
+                        <h1 class="heading">様々なイベント</h1>
                         <ul>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                 <div class="blog-img">
