--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                             <img class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms" src="images/cooker-img.jpg" alt="日语角">
                         </p>
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms" style="text-align:justify">
-                            杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。</br>
-                            現在は杭州在住日本人、留学生、アニメファン、日本留学経験者等いろんな方が集まっています。</br>
-                            交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。また、交流会の以外、みんな飲みに行ったり、遊びに行ったり、楽しいイベントを企画したりすることもあります。異文化交流に興味があり、友達が欲しい、日本人同士を探したい様々の理由がありますが、是非いらっしゃってください！</br>
+                            杭州中日友好日語交流会は、日中文化交流と外国語の勉強や練習のために、2008年に浙江大学と浙江外国語学院の学生たちが創立しました。<br />
+                            現在は杭州在住日本人、留学生、アニメファン、日本留学経験者等いろんな方が集まっています。<br />
+                            交流会は友達作りの場を設け、基本的にみんなが好きな話題をコミュニケーションします。また、交流会の以外、みんな飲みに行ったり、遊びに行ったり、楽しいイベントを企画したりすることもあります。異文化交流に興味があり、友達が欲しい、日本人同士を探したい様々の理由がありますが、是非いらっしゃってください！
                         </p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                                 </div>
                                 <div class="content-right">
                                     <h3>飲み会</h3>
-                                    <p>日本語コーナーが終わった後に、ほぼ毎週行っています。美味しい中華料理または日本料理を食べながら、ビールを飲みましょう！</p>
+                                    <p>日本語コーナーが終わった後に、ほぼ毎週行っています。美味しい中華料理または日本料理を食べましょう！</p>
                                 </div>
                             </li>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="500ms">
